made few extended challenges

--- a/About.html
+++ b/About.html
@@ -1,57 +1,31 @@
 <html>
-<style>
-body {
-	margin: 0;
-	font-family: Arial, Helvetica, sans-serif;
-}
-
-.top-container {
-	background-color: #f1f1f1;
-	padding: 30px;
-	text-align: center;
-}
-
-.header {
-	padding: 10px 16px;
-	background: #555;
-	color: #f1f1f1;
-}
-
-.content {
-	padding: 16px;
-}
-
-.sticky {
-	position: fixed;
-	top: 0;
-	width: 100%;
-}
-
-.sticky+.content {
-	padding-top: 102px;
-}
-</style>
+<head>
+  <link href ="styles.css" rel="stylesheet"/>
+  
+</head>
 <body>
 	<div class="header" id="myHeader">
 		<h2>Supriya Radhkrishnan</h2>
 	</div>
 	<br />
-	<a href="HomePage.html">Home</a> &ensp;&ensp;&ensp;&ensp;
-	<a href="Portfolio.html">Portfolio</a>
+	<a class ="links" href="HomePage.html">Home</a> &ensp;&ensp;&ensp;&ensp;
+	<a class ="links" href="Portfolio.html">Portfolio</a>
 	<h2>Projects</h2>
-	<a href="https://github.com/SupriyaRadhakrishnan/QuestionsGame">Questions
+	<a  href="https://github.com/SupriyaRadhakrishnan/QuestionsGame">Questions
 		Game</a>
-	<br />
-	<a href="https://github.com/SupriyaRadhakrishnan/gc-midterm">Mid-Term
+	<br /><br />
+	<a  href="https://github.com/SupriyaRadhakrishnan/gc-midterm">Mid-Term
 		Project</a>
-	<br />
-	<a href="https://github.com/SupriyaRadhakrishnan/capstone1">CapStone</a>
-	<br />
+	<br /><br />
+	<a  href="https://github.com/SupriyaRadhakrishnan/capstone1">CapStone</a>
+	<br /><br />
 	<a href="https://github.com/SupriyaRadhakrishnan/lab12">Car</a>
-
+	<br /><br />
+<img src ="MyPic.jpg" alt="MyPic"/>
 	<footer>
 		<p>
 			Personal Profile:Supriya Radhkrishnan<br>
 	</footer>
+	
 </body>
 </html>
