--- a/HomePage.html
+++ b/HomePage.html
@@ -1,68 +1,62 @@
 <html>
+<head>
+<link href="styles.css" rel="stylesheet" />
+<script
+	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwxU3riLFvI-uTadgPqJzSO0kXyhPZsw0&callback=initMap&libraries=&v=weekly"
+	defer></script>
+<script src="Profile.js"></script>
+</head>
 <style>
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.top-container {
-  background-color: #f1f1f1;
-  padding: 30px;
-  text-align: center;
-}
-
-.header {
-  padding: 10px 16px;
-  background: #555;
-  color: #f1f1f1;
-}
-
-.content {
-  padding: 16px;
-}
-
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-.sticky + .content {
-  padding-top: 102px;
-}
 </style>
 <body>
 	<div class="header" id="myHeader">
 		<h2>Supriya Radhkrishnan</h2>
 	</div>
 	<br />
-	<a href ="About.html">About</a>
-	 &ensp;&ensp;&ensp;&ensp;
-	<a href ="Portfolio.html">Portfolio</a>
-	
+	<a class="links" href="About.html">About</a> &ensp;&ensp;&ensp;&ensp;
+	<a class="links" href="Portfolio.html">Portfolio</a>
+
 	<h2>Personal Interests</h2>
-	<p><i>Acrylic Painting , Traveling , Learning different languages</i></p>
-	<h2>Last Role</h2>
-	<p><i>Soa Developer</i></p>
+	<p>I love traveling and exploring the culture and food in different
+		places. I have traveled to multiple cities in 4 countries.I love to
+		paint,just as a hobby. Reading books is one of my favorite hobby.I am
+		more into non fictional.</p>
+	<h2>Professional Experience</h2>
+	<p>I was a SOA developer for 7 Years and worked for a logistics
+		client based out of US. I was involved requirement gathering,design
+		analysis,development and maintenance.</p>
 	<h2>HomeTown</h2>
-	<p><i>I am from Pondicherry,a small city in South of India.
-	It is a coastal region with a number of beaches.</i></p>
+	<p>I am from Pondicherry,a small union territory in South of India.
+		It is a coastal region with a number of beaches.It was once a French
+		colony and still have few French settlements.</p>
+
+	<br />
+	<br />
+	<img src="MyPic.jpg" alt="MyPic" />
+
 	<footer>
-  <p>Personal Profile:Supriya Radhkrishnan<br>
-</footer>
+		<p>
+			Personal Profile:Supriya Radhkrishnan<br>
+	</footer>
+	<br />
+	<br />
+	<div id="map"></div>
 </body>
 <script>
-window.onscroll = function() {myFunction()};
+	window.onscroll = function() {
+		myFunction()
+	};
 
-var header = document.getElementById("myHeader");
-var sticky = header.offsetTop;
+	var header = document.getElementById("myHeader");
+	var sticky = header.offsetTop;
 
-function myFunction() {
-  if (window.pageYOffset > sticky) {
-    header.classList.add("sticky");
-  } else {
-    header.classList.remove("sticky");
-  }
-}
+	function myFunction() {
+		if (window.pageYOffset > sticky) {
+			header.classList.add("sticky");
+		} else {
+			header.classList.remove("sticky");
+		}
+	}
 </script>
-</html>	
+
+</html>
