--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,57 +1,54 @@
 <html>
-<style>
-body {
-	margin: 0;
-	font-family: Arial, Helvetica, sans-serif;
-}
-
-.top-container {
-	background-color: #f1f1f1;
-	padding: 30px;
-	text-align: center;
-}
-
-.header {
-	padding: 10px 16px;
-	background: #555;
-	color: #f1f1f1;
-}
-
-.content {
-	padding: 16px;
-}
-
-.sticky {
-	position: fixed;
-	top: 0;
-	width: 100%;
-}
-
-.sticky+.content {
-	padding-top: 102px;
-}
-</style>
+<head>
+  <link href ="styles.css" rel="stylesheet"/>
+</head>
 <body>
 	<div class="header" id="myHeader">
 		<h2>Supriya Radhkrishnan</h2>
 	</div>
 	<br />
-	<a href="HomePage.html">Home</a> &ensp;&ensp;&ensp;&ensp;
-	<a href="About.html">About</a>
+	<a class ="links" href="HomePage.html">Home</a> &ensp;&ensp;&ensp;&ensp;
+	<a class ="links" href="About.html">About</a>
 	<h2>BioData</h2>
 	<h3>Summary</h3>
-	<p><i>6+ years experience in SOA Development.Trained in Java.Involved
+	<p>6+ years experience in SOA Development.Trained in Java.Involved
 		in different phases of software life cycle such as Requirement
 		Analysis, Designing, Development and unit Testing Have Extensive
-		experience in SDLC.</i></p>
+		experience in SDLC.</p>
 	<h3>Technical Skills</h3>
-	<p><i>Java,SOA,SQL,CSS,HTML,XSLT</i></p>
+	<ul>
+	<li>Java</li>
+	<li>SOA</li>
+	<li>HTML</li>
+	<li>CSS</li>
+	</ul>
 	<h3>Education</h3>
-	<p><i>Bachelors in Information Technology</i></p>
+	<ul>
+	<li>Grand Circus Java BootCamp</li>
+	<li>Bachelors in Information Technology</li>
+	</ul>
+	<h3>EAI</h3>
+	<ul>
+	<li>Oracle Fusion Miidleware 10g/11g</li>
+	</ul>
+	<h3>Tools</h3>
+	<ul>
+	<li>JDevloper</li>
+	<li>Eclipse</li>
+	<li>MySQL</li>
+	<li>GitHub</li>
+	<li>CA Agile Central</li>
+	</ul>
+	<h3>Certification</h3>
+	<ul>
+	<li>Professional Scrum Master 1 </li>
+	</ul>
 	<h3>Contact Details</h3>
 	<p>
 		222-222-2222<br /> <a href="Supriya@example.com">Supriya@example.com</a>
 	</p>
+	<br /><br /><br />
+	<img src ="MyPic.jpg" alt="MyPic"/>
 	<footer>
 		<p>
 			Personal Profile:Supriya Radhkrishnan<br>
