adding media queries

--- a/HomePage.html
+++ b/HomePage.html
@@ -10,7 +10,7 @@
 </style>
 <body>
 	<div class="header" id="myHeader">
-		<h2>Supriya Radhkrishnan</h2>
+		<h2>Supriya Radhakrishnan</h2>
 	</div>
 	<br />
 	<a class="links" href="About.html">About</a> &ensp;&ensp;&ensp;&ensp;
